Fix layout issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,9 @@
 /*
  *= require bootstrap
- *= require bootstrap.min
  *= require bootstrap-responsive
  *= require bootstrap-responsive.min
  */
 
+.deal{
+  margin-bottom: 20px
+}
